Fix main menu alignment

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -74,8 +74,8 @@
 		max-width: 860px;
 		margin : 0 auto;
 
-		@media screen and (min-width: 75em) {
-			margin : 0 inherit;
+		@media screen and (min-width: 75em){
+			margin: initial;
 		}
 	}
 
